; ModuleID = '/home/carl/AnghaBench/linux/fs/hfsplus/extr_xattr_trusted.c_hfsplus_trusted_getxattr.c'
source_filename = "/home/carl/AnghaBench/linux/fs/hfsplus/extr_xattr_trusted.c_hfsplus_trusted_getxattr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xattr_handler = type { i32 }
%struct.dentry = type { i32 }
%struct.inode = type { i32 }

@XATTR_TRUSTED_PREFIX = common dso_local global i32 0, align 4
@XATTR_TRUSTED_PREFIX_LEN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.xattr_handler*, %struct.dentry*, %struct.inode*, i8*, i8*, i64)* @hfsplus_trusted_getxattr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @hfsplus_trusted_getxattr(%struct.xattr_handler* %0, %struct.dentry* %1, %struct.inode* %2, i8* %3, i8* %4, i64 %5) #0 {
  %7 = alloca %struct.xattr_handler*, align 8
  %8 = alloca %struct.dentry*, align 8
  %9 = alloca %struct.inode*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i64, align 8
  store %struct.xattr_handler* %0, %struct.xattr_handler** %7, align 8
  store %struct.dentry* %1, %struct.dentry** %8, align 8
  store %struct.inode* %2, %struct.inode** %9, align 8
  store i8* %3, i8** %10, align 8
  store i8* %4, i8** %11, align 8
  store i64 %5, i64* %12, align 8
  %13 = load %struct.inode*, %struct.inode** %9, align 8
  %14 = load i8*, i8** %10, align 8
  %15 = load i8*, i8** %11, align 8
  %16 = load i64, i64* %12, align 8
  %17 = load i32, i32* @XATTR_TRUSTED_PREFIX, align 4
  %18 = load i32, i32* @XATTR_TRUSTED_PREFIX_LEN, align 4
  %19 = call i32 @hfsplus_getxattr(%struct.inode* %13, i8* %14, i8* %15, i64 %16, i32 %17, i32 %18)
  ret i32 %19
}

declare dso_local i32 @hfsplus_getxattr(%struct.inode*, i8*, i8*, i64, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
